--- a/Front-end/frontAngular/src/app/bets/bets.component.html
+++ b/Front-end/frontAngular/src/app/bets/bets.component.html
@@ -1,12 +1,13 @@
 <ng-container *ngIf="loaded">
 
   <div *ngIf="loaded">
+    <h1>My bets</h1>
     <ul class="albums-list">
       <li *ngFor="let bet of bets">
         <div class="albums__container">
-          <h2 [routerLink]="['/bets/', bet.id]">{{ bet.id }}</h2>
-          <h2 [routerLink]="['/bets/', bet.id]">{{ bet.amount }}</h2>
-          <h3 [routerLink]="['/bets/', bet.id]">{{ bet.state_chosen }}</h3>
+          <h2 [routerLink]="['/bets/', bet.id]">bet id: {{ bet.id }}</h2>
+          <h2 [routerLink]="['/bets/', bet.id]">bet amount: {{ bet.amount }}</h2>
+          <h3 [routerLink]="['/bets/', bet.id]">bet state chosen: {{ bet.state_chosen }}</h3>
           <button (click)="DeleteBet(bet.id)">Delete</button>
 
         </div>
